# zelenkaParser

./: .gitignore  main.py  pyproject.toml  settings.py
core/: api.py  api_interaction.py  browser_interaction.py  db.py  test.py  utils.py
